--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,15 +22,21 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.volley:volley:1.0.0'
 
+    implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.2.5'
+
     implementation 'com.google.android.gms:play-services-location:11.4.0'
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
 
     implementation 'com.android.support:support-annotations:27.1.1'
+
+
+
 
     implementation 'pub.devrel:easypermissions:1.3.0'
 }
